[gd_scene load_steps=6 format=3 uid="uid://75amelshbw2u"]

[ext_resource type="Script" path="res://scenes/player_ship.gd" id="1_2oq58"]
[ext_resource type="Texture2D" uid="uid://dbjqjfj2dcu21" path="res://images/06.png" id="1_nxi8f"]
[ext_resource type="Texture2D" uid="uid://p3qvtq2caru7" path="res://images/tiny_ship1.png" id="1_r74qj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c3nig"]
radius = 8.50003

[sub_resource type="CircleShape2D" id="CircleShape2D_qqneh"]
radius = 11.0

[node name="PlayerShip" type="CharacterBody2D" groups=["PlayerGroup"]]
position = Vector2(8, -8)
collision_mask = 106
motion_mode = 1
script = ExtResource("1_2oq58")
metadata/_edit_group_ = true

[node name="EngineSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-13, 0)
scale = Vector2(0.400001, 0.400001)
texture = ExtResource("1_nxi8f")

[node name="ShipSprite" type="Sprite2D" parent="."]
rotation = 1.57079
texture = ExtResource("1_r74qj")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
editor_draw_limits = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -0.0228748)
shape = SubResource("CircleShape2D_c3nig")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(40, 0)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_qqneh")
debug_color = Color(0.725734, 0.277729, 0.579432, 0.42)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
